...
import org.smartregister.fhircore.engine.ui.theme.LoginDarkColor
import org.smartregister.fhircore.engine.ui.theme.LoginFieldBackgroundColor
import org.smartregister.fhircore.engine.util.annotation.PreviewWithBackgroundExcludeGenerated
import org.smartregister.fhircore.engine.util.extension.appVersion
import org.smartregister.opensrp.R

const val APP_NAME_TEXT_TAG = "aapNameTextTag"
const val USERNAME_FIELD_TAG = "usernameFieldTag"
const val PASSWORD_FIELD_TAG = "passwordFieldTag"
const val LOGIN_BUTTON_TAG = "loginButtonTag"
const val LOGIN_ERROR_TEXT_TAG = "loginErrorTextTag"
const val LOGIN_FOOTER = "loginFooter"
const val APP_LOGO_TAG = "appLogoTag"
const val PASSWORD_FORGOT_DIALOG = "forgotPassWordDialog"

@Composable
fun LoginScreen(loginViewModel: LoginViewModel, appVersionPair: Pair<Int, String>? = null) {
  val applicationConfiguration = remember { loginViewModel.applicationConfiguration }
  val username by loginViewModel.username.observeAsState("")
  val password by loginViewModel.password.observeAsState("")
...
