...
import org.smartregister.fhircore.engine.ui.theme.LoginButtonColor
import org.smartregister.fhircore.engine.ui.theme.LoginDarkColor
import org.smartregister.fhircore.engine.util.annotation.ExcludeFromJacocoGeneratedReport

const val TOOLBAR_MENU_ICON = "toolbarIcon"
const val TOOLBAR_MENU_LOGIN = "toolbarMenuLogin"
const val FORGOT_PIN = "forgot_pin"

@Composable
fun OtpLoginScreen(viewModel: OtpViewModel) {

  val showError by viewModel.showError.observeAsState(initial = false)

...
